# 2025

./: .gitignore  README.md  build.gradle  build_libs.ab  build_libs.sh
.wpilib/: wpilib_preferences.json
rust-lib/: Cargo.toml
rust-lib/src/: filter.rs  math.rs
src/deploy/pathplanner/: settings.json
src/deploy/pathplanner/autos/: New Auto.auto  New New Auto.auto  blue.1.auto
src/deploy/pathplanner/paths/: ReefCageBargeToHumanCage.path  ReefCenterBargeToHumanProcessor.path  ReefProcessorBargeToHumanProcessor.path  ReefProcessorHumanToHumanProcessor.path  StartCageToReefCage.path  StartCenterToReefCenter.path  StartProcessorToReefProcessor.path  blue.1.1.path  blue.1.2.path  blue.1.3.path  blue.2.1.path  blue.2.2.path  blue.Score-ball-processor.path  blue.Score.path  blue.human.side.path  blue.score-coral-score-coral-score.path  leave.1.path  leave.2.path  red.Score-ball-processor.path  red.Score.path  red.human.side.path  red.score-coral-score-coral-score.path
src/main/deploy/music/: Cirice Ghost.chrp  Hail to the King.chrp  PigStep.chrp  live_and_learn.chrp
src/main/deploy/pathplanner/: settings.json
src/main/deploy/pathplanner/autos/: 1 Piece L4 Blue.auto  1 Piece L4 Red.auto  1 Piece L4.auto  2 Piece L4 Blue.auto  2 Piece L4 Red.auto  2 Piece L4.auto  Aprilign Auto.auto  Blue Cage Move Test.auto  Blue Center Move Test.auto  Blue Processor Move Test.auto  Cage Side No Score.auto  Cage Side Score L2 then L4.auto  Cage Side Score L4 Double.auto  Cage Side Score L4 Single.auto  (+46 more)
vendordeps/: AdvantageKit.json  Studica-2025.0.1.json  photonlib.json
(+227 files in other folders)
