[package]
name = "rust_lib"
version = "0.1.0"
edition = "2024"

[lib]
name="math"    # The name of the target.
path = "src/math.rs"    # The source file of the target.
crate-type = ["cdylib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).
